# atten

./: .gitignore  DEPLOYMENT.md  Package.swift  README.md  VOICES.md  cli.py  pixi.toml  play.py  pyproject.toml
.github/workflows/: ci.yml  pages.yml  release.yml
Sources/Atten/: AlignedTextEditor.swift  AppModel.swift  AttenApp.swift  DesignSystem.swift  ExportsView.swift  PlaygroundView.swift  ProjectsView.swift  RootView.swift  SettingsView.swift  StudioView.swift  VoicesView.swift
Sources/Atten/Resources/: placeholder.txt
Sources/AttenCore/: BackendClient.swift  ExportService.swift  KeychainCredentialStore.swift  Models.swift  Persistence.swift  VoiceCatalog.swift
apps/windows/Atten.Windows/: App.xaml  App.xaml.cs  (+9 more)
atten_backend/: __init__.py  catalog.py  device.py  service.py
docs/: ARCHITECTURE.md  WINDOWS.md
legal/: CORRESPONDING_SOURCE.md  MODEL_ATTRIBUTION.md  THIRD_PARTY_NOTICES.md
macOS/: Info.plist
packaging/: RELEASE_NOTES.md  atten-backend-macos.spec  atten-backend-windows-cpu.spec  atten-backend-windows-cuda.spec  atten-backend.spec
resources/: voices.json
scripts/: build-app  build-app-macos  build-release  build-windows.ps1  generate-sbom  prepare-model  smoke-packaged-backend
tests/: test_backend.py
tests/AttenCoreTests/: AppModelTests.swift  BackendClientTests.swift  ExportServiceTests.swift  PersistenceTests.swift
website/: .gitignore  package-lock.json  package.json
website/app/: globals.css  layout.tsx  page.tsx
website/components/: app-preview.tsx  command-block.tsx  download-button.tsx  icons.tsx  neural-veil.tsx
(+1 files in other folders)
